# teste-tecnico-senior-rpa

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
alembic/: env.py
alembic/versions/: 53292f41e640_initial_migration.py
app/api/: main.py
app/core/: config.py  rabbitmq.py
app/models/: models.py
app/schemas/: schemas.py
app/scrapers/: base.py  hockey_scraper.py  oscar_scraper.py
app/services/: job_service.py
app/worker/: main.py
tests/integration/: test_flow.py
tests/unit/: test_api.py  test_oscar_parser.py  test_parsers.py
